@@ -1,5 +1,11 @@
 2005-09-13  Yves Combe  <yves@ycombe.net>
 
+	change background with level, to make level change visible.
+
+	* src/boards/python/bargame.py:
+
+2005-09-13  Yves Combe  <yves@ycombe.net>
+
 	sqlite quote string in conf too.
 	workaround tuxpaint lockfile bug.
 
